package Model;

/**
 *
 * @author jorge
 */
public class Receipt {
    
    String idTask;
    
    String description;
    
    
    
}
